Fix dark mode body background color bug

--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
 *{box-sizing:border-box}
 html,body,table,select,button{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;font-size:16px;line-height:1.5}
-html,body{height:100%}
-body{margin:0;overflow-y:scroll}
+body{margin:0;color:#111;background-color:#fff;overflow-y:scroll}
 a{color:inherit;text-decoration:none;font-weight:bold}
 a:hover,a:focus{text-decoration:underline}
 [v-cloak]{display:none}
 
-.app{color:#111;background-color:#fff;min-height:100%}
-.container{padding:.5rem 1rem;margin:0 auto;width:92rem}
+.app{padding:.5rem 1rem;margin:0 auto;width:92rem}
 .columns{display:flex}.column{flex:1}
 .header{margin:1rem 0}
 .options{display:flex;justify-content:flex-end;align-items:center}
